add_subdirectory(access)
add_subdirectory(catalog)
add_subdirectory(common)
add_subdirectory(commands)
add_subdirectory(executor)
add_subdirectory(parser)
add_subdirectory(port)
add_subdirectory(storage)
add_subdirectory(top)
add_subdirectory(util)
#add_subdirectory(server)
add_subdirectory(lex)
add_subdirectory(sema)
add_subdirectory(tools)
add_subdirectory(c_util)
